#ifndef STALL_H
#define STALL_H

#include "Leaf.h"

class Stall : public Leaf
{
	public:
		Stall(int cap);
};

#endif
